Migrate UsageStats to Spa
The UsageStats page is for testing only, cannot entry through Settings
Home, but is accessible by enter *#*#4636#*#* in dialer.

Migrate UsageStats to Spa for both improving the UI & performance.

Fix: 244675756
Bug: 235727273
Test: Manual with Settings App
Change-Id: I6ec6e233075a3f79ac1231aecafabf2a71dac716

Former-commit-id: d22619e995ecae79689081d4b60684c05d129ff2

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -2911,15 +2911,6 @@
             </intent-filter>
         </activity>
 
-        <activity android:name="UsageStatsActivity"
-                  android:exported="true"
-                  android:label="@string/usage_stats_label">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-                <category android:name="android.intent.category.DEVELOPMENT_PREFERENCE" />
-            </intent-filter>
-        </activity>
-
         <activity
             android:name="Settings$PowerUsageSummaryActivity"
             android:label="@string/power_usage_summary_title"
@@ -4584,10 +4575,20 @@
             </intent-filter>
         </activity>
 
-        <activity
-            android:name="com.android.settings.spa.SpaActivity"
-            android:exported="false">
-        </activity>
+        <activity android:name=".spa.SpaActivity" android:exported="false"/>
+        <activity android:name=".spa.SpaBridgeActivity" android:exported="false"/>
+
+        <activity-alias android:name="UsageStatsActivity"
+                        android:exported="true"
+                        android:label="@string/testing_usage_stats"
+                        android:targetActivity=".spa.SpaBridgeActivity">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+                <category android:name="android.intent.category.DEVELOPMENT_PREFERENCE" />
+            </intent-filter>
+            <meta-data android:name="com.android.settings.spa.DESTINATION"
+                       android:value="UsageStats"/>
+        </activity-alias>
 
         <!-- This is the longest AndroidManifest.xml ever. -->
     </application>
