--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -4589,6 +4589,11 @@
             android:exported="false">
         </activity>
 
+        <activity
+            android:name="com.android.settings.spa.SpaDebugActivity"
+            android:exported="false">
+        </activity>
+
         <!-- This is the longest AndroidManifest.xml ever. -->
     </application>
 </manifest>
