Added transparency-metadata display.
This feature enables 'App Details' to support MBAs with metadata file and display in an offline UI. This change includes a new fragment and user view that sources data from within any MBAs apk file that contains application-metadata.xml.

Test: make -j64 RunSettingsRoboTests , AVD manual test
Change-Id: If7822100a90f5fb8d33ce5d85958391fc33ecbee
Bug: 244215932

Former-commit-id: 9c68bf9312bafbfdb7a01886370da082becea6ad

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -4605,6 +4605,17 @@
             android:exported="false">
         </activity>
 
+        <activity
+            android:name="com.android.settings.applications.mobilebundledapps.MobileBundledAppDetailsActivity"
+            android:label="@string/mobile_bundled_apps_details_title"
+            android:exported="true"
+            android:icon="@drawable/ic_homepage_connected_device">
+            <intent-filter android:priority="1">
+                <action android:name="android.settings.TRANSPARENCY_METADATA" />
+                <category android:name="android.intent.category.DEFAULT" />
+            </intent-filter>
+        </activity>
+
         <!-- This is the longest AndroidManifest.xml ever. -->
     </application>
 </manifest>
