Rename the shortcut title for dark theme from "Schedule" to "Dark theme"
The label defined in the activity won't be displayed in the page.

Test: manually
Bug: 247701644
Change-Id: Ibf2ef6aa38de109618896a9db28d9a8245aa32c3

Former-commit-id: 2598dd4e39d03564c96e5481fa4b78ee288bf4fa

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1314,7 +1314,7 @@
 
         <activity
                 android:name="Settings$DarkThemeSettingsActivity"
-                android:label="@string/dark_ui_auto_mode_title"
+                android:label="@string/dark_ui_mode"
                 android:exported="true"
                 android:enabled="true">
             <intent-filter android:priority="32">
