--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -4579,6 +4579,13 @@
 
         <activity android:name=".spa.SpaActivity" android:exported="false"/>
         <activity android:name=".spa.SpaBridgeActivity" android:exported="false"/>
+        <activity android:name=".spa.SpaDebugActivity" android:exported="false"/>
+        <provider
+            android:name=".spa.SpaEntryProvider"
+            android:authorities="com.android.settings.spa.provider"
+            android:enabled="true"
+            android:exported="false">
+        </provider>
 
         <activity-alias android:name="UsageStatsActivity"
                         android:exported="true"
@@ -4591,11 +4598,6 @@
             <meta-data android:name="com.android.settings.spa.DESTINATION"
                        android:value="UsageStats"/>
         </activity-alias>
-
-        <activity
-            android:name="com.android.settings.spa.SpaDebugActivity"
-            android:exported="false">
-        </activity>
 
         <activity
             android:name="com.android.settings.applications.mobilebundledapps.MobileBundledAppDetailsActivity"
