Fix fragment class for WIFI_SAVED_NETWORK_SETTINGS. Has been broken since the old access points implementation was deleted.
Change-Id: I8575e6f79644d0a79de9e041cb30b0ccbc0e57d3
Bug: 246772836

Former-commit-id: f1d115c38ee69c0083264da90a4a779d17976d2a

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -481,7 +481,7 @@
                 <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
             <meta-data android:name="com.android.settings.FRAGMENT_CLASS"
-                android:value="com.android.settings.wifi.savedaccesspoints.SavedAccessPointsWifiSettings" />
+                android:value="com.android.settings.wifi.savedaccesspoints2.SavedAccessPointsWifiSettings2" />
             <meta-data android:name="com.android.settings.HIGHLIGHT_MENU_KEY"
                 android:value="@string/menu_key_network"/>
             <meta-data android:name="com.android.settings.PRIMARY_PROFILE_CONTROLLED"
