AppClone: Add preference to display new page Cloned Apps
Also adds a faeture flag and controller class for this page.
UX path: Apps > Cloned Apps

Bug: 249916503
Bug: 248235441
Test: manual
Test: make RunSettingsRoboTests -j30 ROBOTEST_FILTER=AppsPreferenceControllerTest
Test: make RunSettingsRoboTests -j30 ROBOTEST_FILTER=ClonedAppsPreferenceControllerTest
Change-Id: I2f68f4365ce08481c7db7bfdda4fdffc369321a9

Former-commit-id: a6ff897cf39bebf0f8ef8fe687df1dfb08f5625a

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -3492,6 +3492,18 @@
                        android:value="@string/menu_key_notifications"/>
         </activity>
 
+        <!-- Displays a list of apps available for cloning on the device -->
+        <activity android:name=".Settings$ClonedAppsListActivity"
+                  android:label="@string/cloned_apps_dashboard_title"
+                  android:exported="true">
+            <intent-filter android:priority="1">
+                <action android:name="android.settings.MANAGE_CLONED_APPS_SETTINGS" />
+                <category android:name="android.intent.category.DEFAULT" />
+            </intent-filter>
+            <meta-data android:name="com.android.settings.FRAGMENT_CLASS"
+                       android:value="com.android.settings.applications.manageapplications.ManageApplications" />
+        </activity>
+
         <!-- Application-level notification settings page, same as above but only accessible
              internally from system server -->
         <activity android:name="Settings$NotificationReviewPermissionsActivity"
