Copy BatteryUsageLoaderService and BatteryBroadcastReceiver from SettingsGoogle to Settings and rename them to BatteryUsageDataLoader and BatteryUsageBroadcastReceiver.
Bug: 253395332
Test: make RunSettingsRoboTests
Change-Id: Ide7c572a7df826ca576223c297b8ec78c45cc94e

Former-commit-id: fb136dd8d5f83e90e51add68cdcc1994eb78f8b0

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -2973,6 +2973,14 @@
             android:authorities="${applicationId}.battery.usage.provider"
             android:permission="com.android.settings.BATTERY_DATA"/>
 
+        <receiver android:name=".fuelgauge.batteryusage.BatteryUsageBroadcastReceiver"
+                  android:exported="true">
+            <intent-filter>
+                <action android:name="com.android.settings.battery.action.FETCH_BATTERY_USAGE_DATA"/>
+                <action android:name="com.android.settings.battery.action.CLEAR_BATTERY_CACHE_DATA"/>
+            </intent-filter>
+        </receiver>
+
         <activity
             android:name="Settings$BatterySaverSettingsActivity"
             android:label="@string/battery_saver"
