--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -2983,6 +2983,26 @@
             </intent-filter>
         </receiver>
 
+        <receiver
+            android:name=".fuelgauge.batteryusage.BootBroadcastReceiver"
+            android:exported="true">
+            <intent-filter>
+                <action android:name="android.intent.action.BOOT_COMPLETED"/>
+                <action android:name="android.intent.action.MY_PACKAGE_REPLACED"/>
+                <action android:name="android.intent.action.MY_PACKAGE_UNSUSPENDED"/>
+                <action android:name="com.google.android.setupwizard.SETUP_WIZARD_FINISHED"/>
+                <action android:name="com.android.settings.battery.action.PERIODIC_JOB_RECHECK"/>
+            </intent-filter>
+        </receiver>
+
+        <receiver
+            android:name=".fuelgauge.batteryusage.PeriodicJobReceiver"
+            android:exported="false">
+            <intent-filter>
+                <action android:name="com.android.settings.battery.action.PERIODIC_JOB_UPDATE"/>
+            </intent-filter>
+        </receiver>
+
         <activity
             android:name="Settings$BatterySaverSettingsActivity"
             android:label="@string/battery_saver"
