--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -2313,7 +2313,7 @@
             android:theme="@style/GlifTheme.Light"/>
 
         <activity android:name=".password.ForgotPasswordActivity"
-            android:theme="@style/GlifV3Theme.Light"
+            android:theme="@style/GlifV3Theme.DayNight"
             android:exported="false"/>
 
         <activity android:name=".biometrics.face.FaceEnrollParentalConsent"
