Fix an untranslated text in the settings shortcut
Test: manual
Change-Id: I6211d2e7d14386771e85291b79c8140a320fd5ba

Former-commit-id: 0cc0149f1816e95fbfdf23842147f42f60f5cc8f

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -4519,7 +4519,7 @@
 
         <activity
             android:name="Settings$ButtonNavigationSettingsActivity"
-            android:label="Button Navigation Settings"
+            android:label="@string/button_navigation_settings_activity_title"
             android:exported="true"
             android:enabled="true">
             <intent-filter android:priority="32">
