Verify and reset invalid scheduled battery level in the booting stage
The minimum scheduled battery level is changed from 5% to 10% in T, if
users upgrade the device from S to T with invalid level value in
the Settings.Global, we have to force reset it into the new minimum
battery level value.

Bug: 258243197
Test: make RunSettingsRoboTests
Change-Id: I89003120aaebcff78d4bf3f7ae8b54e97adae3c8

Former-commit-id: 4c0de2685a2b3fa0e2eeab01e0bf4fb02dfef765

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -2996,6 +2996,14 @@
         </receiver>
 
         <receiver
+            android:name=".fuelgauge.BatterySettingsMigrateChecker"
+            android:exported="true">
+            <intent-filter>
+                <action android:name="android.intent.action.BOOT_COMPLETED"/>
+            </intent-filter>
+        </receiver>
+
+        <receiver
             android:name=".fuelgauge.batteryusage.PeriodicJobReceiver"
             android:exported="false">
             <intent-filter>
